[tool.poetry]
name = "crewai"
version = "0.74.0"
description = "Cutting-edge framework for orchestrating role-playing, autonomous AI agents. By fostering collaborative intelligence, CrewAI empowers agents to work together seamlessly, tackling complex tasks."
readme = "README.md"
authors = ["Joao Moura <joao@crewai.com>"]
homepage = "https://crewai.com"
repository = "https://github.com/crewAIInc/crewAI"
documentation = "https://docs.crewai.com"
requires-python = ">=3.10,<3.14"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = ">=2.4.2"
langchain = ">=0.2.16"
openai = ">=1.13.3"
opentelemetry-api = ">=1.22.0"
opentelemetry-sdk = ">=1.22.0"
opentelemetry-exporter-otlp-proto-http = ">=1.22.0"
instructor = ">=1.3.3"
regex = ">=2024.9.11"
crewai-tools = ">=0.13.1"
click = ">=8.1.7"
python-dotenv = ">=1.0.0"
appdirs = ">=1.4.4"
jsonref = ">=1.1.0"
json-repair = ">=0.25.2"
auth0-python = ">=4.7.1"
litellm = ">=1.44.22"
pyvis = ">=0.3.2"
uv = ">=0.4.18"
tomli-w = ">=1.1.0"
chromadb = ">=0.4.24"

[tool.poetry.extras]
tools = ["crewai-tools>=0.12.1"]
agentops = ["agentops>=0.3.0"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
ruff = ">=0.4.10"
mypy = ">=1.10.0"
pre-commit = ">=3.6.0"
mkdocs = ">=1.4.3"
mkdocstrings = ">=0.22.0"
mkdocstrings-python = ">=1.1.2"
mkdocs-material = ">=9.5.7"
mkdocs-material-extensions = ">=1.3.1"
pillow = ">=10.2.0"
cairosvg = ">=2.7.1"
pytest = ">=8.0.0"
pytest-vcr = ">=1.0.2"
pytest-asyncio = ">=0.23.7"
pytest-subprocess = ">=1.5.2"

[tool.poetry.scripts]
crewai = "crewai.cli.cli:crewai"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = 'import-untyped'
exclude = ["cli/templates"]

[tool.bandit]
exclude_dirs = ["src/crewai/cli/templates"]
